<resources>
    <string name="app_name">ottohub</string>
    <string name="videos">Videos</string>
    <string name="blogs">Blogs</string>
    <string name="user">User</string>
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="recommend">recommend</string>
    <string name="latest">latest</string>
    <string name="week_hot">weekly hot</string>
    <string name="monthly_hot">monthly hot</string>
    <string name="sesson_hot">sessonly hot</string>
    <string name="kichiku">kichiku</string>
    <string name="mad">mad</string>
    <string name="vocaloid" translatable="false">VOCALOID</string>
    <string name="theater">theater</string>
    <string name="game">game</string>
    <string name="nostalgia">nostalgia</string>
    <string name="music">music</string>
    <string name="other">other</string>
    <string name="ok" translatable="false">ok</string>
    <string name="video_card_info_short">%d Views %d Likes %d Favourite</string>
    <string name="describe">Describe</string>
    <string name="comment">Comment</string>
    <string name="like">Like</string>
    <string name="favourite">favourite</string>
    <string name="report">report</string>
    <string name="title_activity_login">Login</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="no">no</string>
    <string name="not_login">Loged out</string>
    <string name="login_in_now">Do you want to login now?</string>
    <string name="tip">TIP</string>
    <string name="error_password">username or passwd is wrong</string>
    <string name="auto_login">Auto Login</string>
    <string name="error">error</string>
    <string name="exp">exp</string>
    <string name="followers">followers</string>
    <string name="followings">followings</string>
    <string name="follow">follow</string>
    <string name="narcissism">narcissism</string>
    <string name="narcissism_msg">You are too narcissism!</string>
    <string name="profile">profile</string>
    <string name="defollowing">unfollow</string>
    <string name="refollow">follow</string>
    <string name="derefollow">unfollow</string>
    <string name="issure">Are you sure?</string>
    <string name="sex">sex</string>
    <string name="register_time">register time</string>
    <string name="history_video">history videos</string>
    <string name="history_blog">history blog</string>
    <string name="history">history</string>
    <string name="toBottom">to bottom</string>
    <string name="show_child_comment">show %d replies</string>
    <string name="reply_of">replies of</string>
    <string-array name="languages">
        <item>@string/zh</item>
        <item>@string/en</item>
    </string-array>
    <string-array name="language_values">
        <item>zh</item>
        <item>en</item>
    </string-array>
    <string name="zh" translatable="false">简体中文</string>
    <string name="en" translatable="false">English</string>
    <string name="language">language</string>
    <string name="settings">settings</string>
    <string name="loading">Loading...</string>
    <string name="clear_cache">clear cache</string>
    <string name="about">about</string>
    <string name="auto_login_off">No auto login</string>
    <string name="version">version</string>
    <string name="package_name">package name</string>
    <string name="build_time">build time</string>
    <string name="ottohub" translatable="false">OTTOhub─=≡Σ((( つ•̀ω•́)つ衝刺～</string>
    <string name="search">Search</string>
    <string name="exp3">Success! Got 3 exp</string>
    <string name="reply">reply</string>
    <string name="danmaku">danmuku</string>
    <string name="mail">mail</string>
    <string name="message">Messages</string>
    <string name="read_msg">read</string>
    <string name="unread_msg">unread</string>
    <string name="sent_msg">sent</string>
    <string name="send_msg">send</string>
    <string name="message_title">Message from %s to %s</string>
    <string name="receiver_uid">reciver\'s uid</string>
    <string name="content_222">No more than 222 words...</string>
    <string name="noContent">Please enter something!</string>
    <string name="too_many_content">Too much words!</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="switch_account">switch_account</string>
    <string name="logout">logout</string>
    <string name="current">Current</string>
    <string name="add">Add</string>
    <string name="audit_button">Aduit</string>
    <string name="under_development">Sorry,under development!</string>
    <string name="remove_account">Remove account</string>
    <string name="remove_account_from_list">Remove account from account list when logout.</string>
    <string name="launcher">App Launcher</string>
    <string name="grantPermissonsTip">Please authorize these permissions to ensure the normal operation of the application.</string>
    <string name="force_service_running">Keep services running</string>
    <string name="show_message">By showing a message</string>
    <string name="skip">Skip</string>
    <string name="permissionCheck">Permission Check</string>
    <string name="git_comment">Git Comment</string>
    <string name="reach_end">End of scroll. Go outside and say hi to a tree 🌳</string>
    <string name="download">Download</string>
    <string name="downloading">Downloading...</string>
    <string name="audit_title">Audit</string>
    <string name="avatar">"Avatar "</string>
    <string name="cover">Cover</string>
    <string name="audit">Aduit</string>
    <string name="view_avatar">Show avatar</string>
    <string name="image_viewer">Image Viewer</string>
    <string name="image_viewer_tip">Long press to save image</string>
    <string name="image_viewer_save_tip">Save to storage?</string>
    <string name="conform">Conform</string>
    <string name="cancel">Cancel</string>
    <string name="no_permission">A permission is required to finish this operation!</string>
    <string name="view_cover">view cover</string>
    <string name="delete">Delete</string>
    <string name="approve">Approve</string>
    <string name="reject">Reject</string>
    <string name="placeholder">Placeholder</string>
    <string name="audit_video_desc">[Title] %s [Describe] %s  [Tags] %s</string>
    <string name="upload_blog">Post Blog</string>
    <string name="upload_video">Post Video</string>
    <string name="title">Title</string>
    <string name="content_8888">No longer than 8888...</string>
    <string name="image_url">Image URL</string>
    <string name="post">Post</string>
    <string name="preview">Preview</string>
    <string name="save_draft">Save Draft</string>
    <string name="upload_image">Upload Image</string>
    <string name="markdown_java">Compatible Markdown</string>
    <string name="markdown_java_summary">[Not Recommend]Priority use Java md interpreter.</string>
    <string name="open_url">Open URL</string>
    <string name="open_url_desc">Cannot find an app to open for \"%s\".</string>
    <string name="til_category">Category</string>
    <string name="republish">Forwarded</string>
    <string name="original">Original</string>
    <string name="til_type">Type</string>
    <string name="upload_cover">Upload Cover (below 1MB)</string>
    <string name="select_video">Upload Video (.mp4 Format,below 200MB)</string>
    <string name="no_cover">Cover was not selected</string>
    <string name="empty_title">Title is empty!</string>
    <string name="empty_intro">Intro is empty</string>
    <string name="empty_type">Type is empty!</string>
    <string name="empty_caterogy">Caterogy is empty!</string>
    <string name="file_too_big">File too big</string>
    <string name="tag">Tags</string>
    <string name="unallow_char">Contains illegal characters</string>
    <string name="upload_success">Upload Successful!</string>
    <string name="got_trouble">Has Trouble?</string>
    <string name="notise_msg">Notice Message Bar</string>
    <string name="click_to_enlarge">Click to enlarge</string>
    <string name="content_manage">Content Manage</string>
    <string name="share">Share</string>
    <string name="approved">Approved</string>
    <string name="under_review">Under review</string>
    <string name="appeal">Appeal</string>
    <string name="appeal_content">Contribution has been reject! \nApply for review?</string>
    <string name="share_content">[%s] - OTTOHUB android \n%s</string>
    <string name="delete_msg">You\'ll lose it forever!(It\'s really been a long time)</string>
    <string name="theme_color">Theme Color</string>
    <string name="theme_default">Default</string>
    <string name="theme_dark">Dark</string>
    <string name="theme_settings">Theme Settings</string>
    <string name="theme_sanae">Sanae green</string>
    <string name="theme_bili">Bili Pink</string>
    <string name="include">Include</string>
    <string name="theme_purple_md2">Grape Purper</string>
    <string name="theme_china_red">China Red</string>
    <string name="system">System</string>
    <string name="reset">Reset</string>
    <string name="update_available">Update Available!</string>
    <string name="update_now">Update now?</string>
    <string name="update_log">Change log</string>
    <string name="update_check">Check Update</string>
    <string name="update_no">No Update!</string>
    <string name="common">Common</string>
    <string name="scale_type">Video Scale Type</string>
    <string name="auto">Auto</string>
    <string name="fit">Fit</string>
    <string name="full">Full</string>
    <string name="zoom">zoom</string>
    <string name="danmaku_mode">Danmaku Type</string>
    <string name="danmaku_float">Floating</string>
    <string name="danmaku_Top">Top</string>
    <string name="danmaku_bottom">Bottom</string>
    <string name="danmaku_size">Font Size(px)</string>
    <string name="update_err">Error checking update!</string>
    <string name="send_msg_1">Send message</string>
    <string name="shorts">Short Videos</string>
    <string name="back">Back</string>
    <string name="detailed">detailed</string>
    <string name="user_settings">User Settings</string>
    <string name="app_crash_title">Whoops! This app has been crashed!</string>
    <string name="app_crash_content">Do you want to restart this app?</string>
    <string name="exit">Exit</string>
    <string name="restart">Restart</string>
    <string name="auto_dark">Dark theme follow system</string>
    <string name="auto_dark_title">Follow system dark mode</string>
    <string name="report_danmaku">Report danmaku %s ?</string>
    <string name="copy">Copy</string>
    <string name="baned">Baned</string>
    <string name="baned_msg">Page fixed by hanana app</string>
    <string name="chat_board">Comment board</string>
    <string name="collection">Collection</string>
    <string name="collection_mgr">Manage Collection</string>
    <string name="none">None</string>
    <string name="show_details">show details</string>
    <string name="retry">Retry</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="stack_track">Starck Track</string>
    <string name="network_error">Network Error</string>
    <string name="no_network_avable">No Available Network</string>
    <string name="email">Email</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="verification_code">Verification Code</string>
    <string name="send_code">Send Code</string>
</resources>