<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/common">
        <Preference
            android:icon="@drawable/palette_24dp"
            android:key="theme"
            android:title="@string/theme_color"
            android:summary="Set the main color of this app" />
        <ListPreference
            android:defaultValue="sys"
            android:entries="@array/languages_setting"
            android:entryValues="@array/languages_setting_val"
            android:icon="@drawable/translate_24dp"
            android:key="language"
            android:summary="Change language,As shown in the title.\n更改应用语言"
            android:title="Language/语言" />
        <Preference
            android:icon="@drawable/update_24dp_"
            android:key="update_now"
            android:title="@string/update_check" />
        <ListPreference
            android:defaultValue="sys"
            android:entries="@array/languages_setting"
            android:entryValues="@array/languages_setting_val"
            android:icon="@drawable/translate_24dp"
            android:key="language"
            android:summary="Change language,As shown in the title.\n更改应用语言"
            android:title="Language/语言" />

        <SwitchPreference
            android:icon="@drawable/tab_inactive_24dp"
            android:defaultValue="true"
            android:key="force_background"
            android:summary="@string/show_message"
            android:title="@string/force_service_running" />
        <SwitchPreference
            android:icon="@drawable/shield_toggle_24dp"
            android:defaultValue="true"
            android:key="permission_check"
            android:title="@string/permissionCheck"
            android:summary="Check permissions before start" />
        <Preference
            android:icon="@drawable/cleaning_services_24dp"
            android:key="clear_cache"
            android:title="@string/clear_cache"
            android:summary="Click to clear cache" />
        <Preference
            android:icon="@drawable/info_24dp"
            android:key="about"
            android:title="@string/about"
            android:summary="About this app" />
        <Preference
            android:icon="@drawable/reset_settings_24dp"
            android:key="reset"
            android:title="@string/reset"
            android:summary="Click to clear ALL settings" />
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/user">
        <SwitchPreference
            android:icon="@drawable/login_24dp"
            android:defaultValue="true"
            android:key="auto_login"
            android:title="@string/auto_login" />
        <SwitchPreference
            android:icon="@drawable/account_circle_off"
            android:defaultValue="true"
            android:key="remove_account"
            android:summary="@string/remove_account_from_list"
            android:title="@string/remove_account" />
        <Preference
            android:icon="@drawable/logout_24dp"
            android:key="logout"
            android:title="@string/logout"
            android:summary="Click to logout account" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/blogs">
        <SwitchPreference
            android:icon="@drawable/markdown_24dp"
            android:defaultValue="false"
            android:key="java_md"
            android:title="@string/markdown_java"
            android:summary="@string/markdown_java_summary" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/videos">
        <ListPreference
            android:icon="@drawable/aspect_ratio_24dp"
            android:defaultValue="auto"
            android:key="scale_type"
            android:entries="@array/scale_type"
            android:entryValues="@array/scale_type_value"
            android:title="@string/scale_type" />
    </PreferenceCategory>


</PreferenceScreen>
