<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_message_button"
        android:icon="@drawable/mail_24dp"
        android:title="@string/message"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_switch_account_button"
        android:icon="@drawable/account_circle_48px"
        android:title="@string/switch_account"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_favourite"
        android:icon="@drawable/kitchen_24dp"
        android:title="@string/favourite"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_audit"
        android:icon="@drawable/balance_24dp"
        android:title="@string/audit_button"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload_blog"
        android:icon="@drawable/docs_24dp"
        android:title="@string/upload_blog"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_upload_video"
        android:icon="@drawable/video_file_24dp"
        android:title="@string/upload_video"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_content_manage"
        android:icon="@drawable/folder_managed"
        android:title="@string/content_manage"
        app:showAsAction="ifRoom" />
</menu>