<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:tag="themed|background"
    android:gravity="center_vertical"
    tools:context=".activity.ForgotPasswordActivity">

    <!-- 邮箱 -->
    <EditText
        android:tag="themed"
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:layout_marginBottom="12dp"/>

    <!-- 密码 -->
    <EditText
        android:tag="themed"
        android:id="@+id/et_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password"
        android:inputType="textPassword"
        android:layout_marginBottom="12dp"/>

    <!-- 确认密码 -->
    <EditText
        android:tag="themed"
        android:id="@+id/et_confirm_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prompt_password_confirm"
        android:inputType="textPassword"
        android:layout_marginBottom="12dp"/>

    <!-- 验证码 + 发送按钮 -->
    <LinearLayout
        android:tag="themed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp">

        <EditText
            android:tag="themed"
            android:id="@+id/et_code"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="@string/verification_code"
            android:inputType="number"/>

        <Button
            android:tag="themed"
            android:id="@+id/btn_send_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/send_code"
            android:layout_marginStart="12dp"/>
    </LinearLayout>

    <!-- 注册按钮 -->
    <Button
        android:tag="themed"
        android:id="@+id/btn_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset"/>

</LinearLayout>
