<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:fillViewport="true"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    tools:context=".activity.UploadVideoActivity"
    android:layout_width="match_parent">
    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:hint="@string/title">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:maxLines="1" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_intro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:hint="@string/describe">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/et_intro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minLines="4"
                android:maxLines="5"
                android:gravity="top|start"
                android:inputType="textMultiLine|textImeMultiLine" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_category"
            app:endIconMode="dropdown_menu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/actv_category"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:entries="@array/vid_category" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/til_type"
            app:endIconMode="dropdown_menu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/actv_type"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none"
                android:entries="@array/vid_type" />
        </com.google.android.material.textfield.TextInputLayout>
        <!-- 横向分割线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#CCCCCC" />
        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <LinearLayout
                android:id="@+id/ll_tag"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <com.google.android.material.button.MaterialButton
                    android:id="@+id/btn_tag_base"
                    android:visibility="gone"
                    android:layout_width="wrap_content"
                    android:text="13213"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </HorizontalScrollView>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_tag"
                android:layout_width="0dp"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:hint="@string/tag">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_tag"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_add_tag"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:text="@string/add"
                android:layout_height="wrap_content"/>
        </LinearLayout>
        <!-- 横向分割线 -->
        <View
            android:layout_width="match_parent"
            android:layout_height="3dp"
            android:background="#CCCCCC" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload_cover"
            android:text="@string/upload_cover"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <ImageView
            android:id="@+id/ivThumbnail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxHeight="160dp"
            android:src="@drawable/ottohub_banner"
            android:scaleType="fitXY"
            android:adjustViewBounds="true"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_upload_video"
            android:text="@string/select_video"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <View
            android:layout_weight="1"
            android:layout_width="match_parent"
            android:layout_height="0dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSend"
            android:text="@string/post"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/tv_trouble"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autoLink="all"
            android:textColor="@color/teal_200"
            android:gravity="center"
            android:text="@string/got_trouble"/>
    </LinearLayout>
</ScrollView>