<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:background="#CC000000"
    android:orientation="vertical"
    android:layout_height="wrap_content">

    <TextView
        android:textSize="22sp"
        android:textColor="@color/white"
        android:text="@string/placeholder"
        android:id="@+id/tvContent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content">

        <ImageButton
            android:backgroundTint="#00000000"
            android:contentDescription="@string/report"
            android:src="@drawable/report_24dp"
            android:id="@+id/btn_report"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white" />
        <ImageButton
            android:backgroundTint="#00000000"
            android:contentDescription="@string/copy"
            android:src="@drawable/content_copy_24dp"
            android:id="@+id/btn_copy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:tint="@color/white" />
    </LinearLayout>
</LinearLayout>